# zdv-training-scheduler

./: .config.example.toml  .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE-MIT  README.md  astro.config.mjs  docker-entrypoint.js  docker-entrypoint.sh  fly.toml  package-lock.json  package.json  systemd.service  tailwind.config.cjs
.github/workflows/: ci.yml
bot/: Dockerfile  bun.lockb  package-lock.json  package.json  systemd.service
bot/ops/: systemd.service
bot/src/: index.ts
bot_rs/: Cargo.toml
bot_rs/src/: main.rs
prisma/: schema.prisma
prisma/migrations/20230920164700_init/: migration.sql
prisma/migrations/20230920222102_init/: migration.sql
prisma/migrations/20230930000357_notes/: migration.sql
site/: .config.example.toml  .dockerignore  astro.config.mjs  package-lock.json  package.json  systemd.service  tailwind.config.cjs
site/ops/: Caddyfile  Dockerfile  backup.sh  index.html  systemd.service
site/prisma/: schema.prisma
site/scripts/: import_roster.ts
site/src/: data.ts  env.d.ts  middleware.ts
site/src/components/: Admin.tsx  Alerts.tsx  AvailableSession.tsx  ExistingSchedule.tsx  IndexPageLoginPrompt.tsx  NavbarEntries.tsx  PendingSession.tsx  Preferences.tsx  Scheduling.tsx  SchedulingStudent.tsx  SchedulingTrainer.tsx  SessionInfo.tsx  (+1 more)
src/components/: IndexPageLoginPrompt.tsx  NavbarEntries.tsx  Scheduling.tsx  SessionIcon.tsx  SessionInfo.tsx
src/data/: db.ts
src/layouts/: Main.astro  Site.astro
src/pages/: index.astro  privacy_policy.astro  scheduling.astro
src/util/: auth.ts  config.ts  zdv_sso.ts
(+67 files in other folders)
